added new buttons, added clear, backspace and memory functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="_7">7</string>
     <string name="_8">8</string>
     <string name="_9">9</string>
+    <string name="_clear">C</string>
+    <string name="_restore">MR</string>
+    <string name="_memory">M</string>
+    <string name="_backspace">⬅</string>
 </resources>
