--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -20,5 +20,5 @@
     <string name="_restore">MR</string>
     <string name="_memory">M</string>
     <string name="_backspace">⬅</string>
-    <string name="mode">night mode</string>
+    <string name="mode">switch to day mode</string>
 </resources>
