--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="_memory">M</string>
     <string name="_backspace">⬅</string>
     <string name="mode">switch to night mode</string>
+    <string name="hint">0</string>
 </resources>
